[gd_scene load_steps=20 format=3 uid="uid://cpioyukxasm74"]

[ext_resource type="Texture2D" uid="uid://dqxw5vlmkiihn" path="res://assets/kfpbackground.png" id="1_lti8b"]
[ext_resource type="Script" uid="uid://bd5vxbgybl2l2" path="res://menu.gd" id="1_mae5d"]
[ext_resource type="Texture2D" uid="uid://dqxsx0duhv1hm" path="res://assets/kfp-birthdayjam-lockup-horiz (1).png" id="2_ouk20"]
[ext_resource type="Texture2D" uid="uid://isc5in4xw7iu" path="res://buttonspritesheet.png" id="3_4hy44"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gd0jp"]
atlas = ExtResource("3_4hy44")
region = Rect2(1.61449, 249.659, 394.099, 81.9616)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ndjb"]
atlas = ExtResource("3_4hy44")
region = Rect2(847.707, 247.61, 395.465, 84.0107)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ls4m"]
atlas = ExtResource("3_4hy44")
region = Rect2(430.662, 248.976, 391.367, 81.2786)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytr4m"]
atlas = ExtResource("3_4hy44")
region = Rect2(7, 3, 389, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_l48gv"]
atlas = ExtResource("3_4hy44")
region = Rect2(856, 3, 389, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecwwl"]
atlas = ExtResource("3_4hy44")
region = Rect2(435, 5, 389, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk3ma"]
atlas = ExtResource("3_4hy44")
region = Rect2(6, 82, 391, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hy44"]
atlas = ExtResource("3_4hy44")
region = Rect2(856, 83, 389, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqepy"]
atlas = ExtResource("3_4hy44")
region = Rect2(436, 84, 388, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrnbx"]
atlas = ExtResource("3_4hy44")
region = Rect2(5, 168, 387, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1wq0"]
atlas = ExtResource("3_4hy44")
region = Rect2(851, 167, 390, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwrpx"]
atlas = ExtResource("3_4hy44")
region = Rect2(432, 169, 389, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7jxm"]
atlas = ExtResource("3_4hy44")
region = Rect2(0, 333.67, 396.217, 82.9444)

[sub_resource type="AtlasTexture" id="AtlasTexture_jspdm"]
atlas = ExtResource("3_4hy44")
region = Rect2(849.082, 331.285, 395.465, 82.6447)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxnod"]
atlas = ExtResource("3_4hy44")
region = Rect2(429.283, 333.997, 394.099, 80.5956)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mae5d")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lti8b")
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = 5.0
offset_right = 294.0
offset_bottom = 421.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
theme_override_constants/separation = 6

[node name="StoryButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_gd0jp")
texture_pressed = SubResource("AtlasTexture_4ndjb")
texture_hover = SubResource("AtlasTexture_3ls4m")

[node name="GameListButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_ytr4m")
texture_pressed = SubResource("AtlasTexture_l48gv")
texture_hover = SubResource("AtlasTexture_ecwwl")
stretch_mode = 4

[node name="MessagesButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_kk3ma")
texture_pressed = SubResource("AtlasTexture_4hy44")
texture_hover = SubResource("AtlasTexture_iqepy")
stretch_mode = 4

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_nrnbx")
texture_pressed = SubResource("AtlasTexture_h1wq0")
texture_hover = SubResource("AtlasTexture_dwrpx")
stretch_mode = 4

[node name="CreditsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_g7jxm")
texture_pressed = SubResource("AtlasTexture_jspdm")
texture_hover = SubResource("AtlasTexture_oxnod")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.0
offset_top = -360.0
offset_right = 1225.0
offset_bottom = 699.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.355, 0.355)
texture = ExtResource("2_ouk20")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="mouse_entered" from="VBoxContainer/StoryButton" to="." method="_on_story_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/StoryButton" to="." method="_on_story_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/GameListButton" to="." method="_on_game_list_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/GameListButton" to="." method="_on_game_list_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/MessagesButton" to="." method="_on_messages_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MessagesButton" to="." method="_on_messages_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
